# pepsi-logo-detector

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  pepsi-logo-detector.sublime-project
app/: CMakeLists.txt
app/src/: Application.cpp  Application.hpp  main.cpp
assets/camera/: config.json
assets/net/: config.json
docs/: main.tex
lib/: CMakeLists.txt
lib/include/: LogoDetector.hpp  PepsiDetector.hpp  blobs.hpp  core.hpp  drawing.hpp  features.hpp  format.hpp  imglog.hpp  log.hpp  moments.hpp  morpho.hpp  points.hpp  segments.hpp  types.hpp  utility.hpp
lib/src/: PepsiDetector.cpp  PepsiDetectorConfig.cpp  PepsiDetectorImpl.hpp  blobs.cpp  core.cpp  drawing.cpp  format.cpp  imglog.cpp  moments.cpp  morpho.cpp  points.cpp  segments.cpp
lib/test/: CMakeLists.txt  PepsiDetector_test.cpp  blobs_test.cpp  core_test.cpp  detector_test.cpp  format_test.cpp  moments_test.cpp  morpho_test.cpp  segments_test.cpp
src/: main.cpp
